[package]
name = "polygon-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.14"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
rusqlite = "0.29"
chrono = { version = "0.4", features = ["serde"] }
